--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
 	</header>
 
 	<main>
+
+		<div class="social-con">
+			<a href="#">
+				<img src="images/sc1.png" alt="">
+			</a>
+			<a href="#">
+				<img src="images/sc2.png" alt="">
+			</a>
+			<a href="#">
+				<img src="images/sc3.png" alt="">
+			</a>
+			<a href="#">
+				<img src="images/sc4.png" alt="">
+			</a>
+		</div>
+
 		<section class="sec-home1">
 			<div class="container-fluid">
 				<div class="home1">
@@ -88,10 +104,71 @@
 				</div>
 			</div>
 		</section>
-		<section class="sec-home2">
-			<div class="la-1"></div>
+		<section class="sec-home2"> 
+			<div class="container-fluid">
+				<div class="img-flex">
+					<a href="#">
+						<div class="img-cover1" style="background: url(images/ss1.png);">
+							<div class="des1">
+								<h5>Looking for property in</h5>
+								<h3>Bangkok</h3>
+							</div>
+						</div>
+					</a> 
+					<div>
+						<a href="#">
+							<div class="img-cover2" style="background: url(images/ss1.png);"> 
+								<div class="des2">
+									<h3>Sathon</h3>
+									<h5>463 Properties for you</h5>
+								</div>
+							</div> 
+						</a>
+						<a href="#">
+							<div class="img-cover2" style="background: url(images/ss1.png);"> 
+								<div class="des2">
+									<h3>Sathon</h3>
+									<h5>463 Properties for you</h5>
+								</div>
+							</div> 
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img-cover2" style="background: url(images/ss1.png);"> 
+								<div class="des2">
+									<h3>Sathon</h3>
+									<h5>463 Properties for you</h5>
+								</div>
+							</div> 
+						</a>
+						<a href="#">
+							<div class="img-cover2" style="background: url(images/ss1.png);"> 
+								<div class="des2">
+									<h3>Sathon</h3>
+									<h5>463 Properties for you</h5>
+								</div>
+							</div> 
+						</a>
+					</div>
+					<a href="#">
+						<div class="img-cover1" style="background: url(images/ss6.png);">
+							<div class="des1">
+								<h5>Looking for property in</h5>
+								<h3>Choburi</h3>
+							</div>
+						</div> 
+					</a>
 
+					
+				<a href="#" class="arr-right">
+					<p>
+						<img src="images/right.png" alt="">
+					</p>
+				</a>
 
+				</div>
+			</div>
 		</section>
 
 		<section class="sec-home3">
@@ -954,7 +1031,7 @@
                 var brandsSlider = $('.owl3');
 
                 brandsSlider.owlCarousel({
-                    center: true,
+                    center: false,
                     loop: true,
                     autoplay: false,
                     autoplayTimeout: 5000,
@@ -962,7 +1039,7 @@
                     dots: false,
                     autoWidth: true,
                     items: 3,
-                    margin: 35
+                    margin: 55
                 }); 
             }  
 
@@ -970,7 +1047,7 @@
                 var brandsSlider = $('.owl4');
 
                 brandsSlider.owlCarousel({
-                    center: true,
+                    center: false,
                     loop: true,
                     autoplay: false,
                     autoplayTimeout: 5000,
@@ -978,7 +1055,7 @@
                     dots: false,
                     autoWidth: true,
                     items: 3,
-                    margin: 35
+                    margin: 55
                 }); 
             }  
 
