--- a/index.html
+++ b/index.html
@@ -783,16 +783,16 @@
 						<div class="row">
 							<div class="col-xl-6">
 								<div class="row">
-									<div class="col-xl-6 mb-5">
+									<div class="col-6 mb-5">
 										<img src="images/r1.png" alt="" class="img-fluid m-auto d-block">
 									</div>
-									<div class="col-xl-6 mb-5">
+									<div class="col-6 mb-5">
 										<img src="images/r2.png" alt="" class="img-fluid m-auto d-block">
 									</div>
-									<div class="col-xl-6">
+									<div class="col-6">
 										<img src="images/r3.png" alt="" class="img-fluid m-auto d-block">
 									</div>
-									<div class="col-xl-6">
+									<div class="col-6">
 										<img src="images/r4.png" alt="" class="img-fluid m-auto d-block">
 									</div>
 								</div>
