--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 
 	<header> 
-		<nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
-			<a href="#" class="navbar-brand d-flex w-50 mr-auto">
+		<nav class="navbar navbar-light navbar-expand-xl bg-faded justify-content-center">
+			<a href="index.html" class="navbar-brand d-flex w-50 mr-auto">
 				<img src="images/logo-1.png" alt="">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
@@ -76,6 +76,9 @@
 			<a href="#">
 				<img src="images/sc4.png" alt="">
 			</a>
+		</div>
+		<div class="container-fluid map">
+
 		</div>
 
 		<section class="sec-home1">
