--- a/contact.html
+++ b/contact.html
@@ -128,19 +128,24 @@
 					<div class="col-xl-10">  
 						<div class="contact-main">
 							<div class="row">
-								<div class="col-xl-6 col-12 pr-5">
+								<div class="col-lg-6 col-12 pr-5">
 									<form>
 										<h3>หากคุณมีคำถามใด ๆ  <br> โปรดอย่าลังเลที่จะส่งข้อความถึงเรา </h3>
 										<input type="text" class="form-control" placeholder="ชื่อ - สกุล">
 										<input type="text" class="form-control" placeholder="อีเมล์">
 										<input type="text" class="form-control" placeholder="เบอร์โทร">
-										<input type="text" class="form-control" placeholder="คุณคือ?">
+										<select class="form-control">
+											<option value="">คุณคือ?</option>
+											<option value="">คุณคือ?</option>
+											<option value="">คุณคือ?</option>
+											<option value="">คุณคือ?</option>
+										</select>
 										<input type="text" class="form-control" placeholder="หัวเรื่อง">
 										<textarea name="" id="" cols="30"  class="form-control" placeholder="ข้อความ"></textarea>
 										<button class="btn">ส่งข้อความ</button>
 									</form>
 								</div>
-								<div class="col-xl-6 col-12 pl-5">
+								<div class="col-lg-6 col-12 pl-5">
 									<div class="contact-description">
 										<h3>สำนักงานของเรา <br> &nbsp; </h3>
 
