--- a/detail.html
+++ b/detail.html
@@ -156,7 +156,7 @@
 									<a href="#">
 										<div class="label-rent">
 											<div>
-												<span>เช่า</span>
+												<span>ขาย</span>
 												<span>30 <br> ยูนิต</span>
 											</div> 
 											<h1>฿6,900,000</h1> 
@@ -193,9 +193,9 @@
 							</div>
 						</div>
 						<div class="col-xl-3 img-view-sub">
-							<div style="background: url(images/v2.png);"></div>
 							<div style="background: url(images/v3.png);"></div>
-							<div style="background: url(images/v4.png);"><a href="#"><p>+ 12 images</p></a></div>
+							<div style="background: url(images/v3.png);"></div>
+							<div style="background: url(images/v3.png);"><a href="#"><p>+ 12 images</p></a></div>
 						</div>
 					</div>
 				
@@ -757,7 +757,7 @@
 			</div>
 		</section>
 
-		<section class="bg-unit">
+		<section class="bg-unit ">
 			<div class="container-fluid">
 				<div class="row justify-content-center">
 					<div class="col-xl-10">
@@ -1299,57 +1299,57 @@
 									<div class="col-xl-3 pl-4 pr-4">
 										<div class="add-project">
 											<div class="img"><img src="images/plus.png" alt=""></div> 
-											 <h3>ชื่อโครงการ</h3>
-											 <h3 class="m">ทำเลที่ตั้ง</h3>
-											 <h3>จำนวนยูนิต</h3>
-											 <h3 class="m">ราคา</h3>
-											 <h3>ค่าเช่าต่อเดือน</h3>
-											 <h3>ปีที่แล้วเสร็จ</h3>
-											 <h3>สถานะของโครงการ</h3>
+											<h3>ชื่อโครงการ</h3>
+											<h3 class="m">ทำเลที่ตั้ง</h3>
+											<h3>จำนวนยูนิต</h3>
+											<h3 class="m">ราคา</h3>
+											<h3>ค่าเช่าต่อเดือน</h3>
+											<h3>ปีที่แล้วเสร็จ</h3>
+											<h3>สถานะของโครงการ</h3>
 										</div>
 									</div>
 									<div class="col-xl-3 pl-4 pr-4">
 										<div class="view-project">
 											<div class="img" style="background: url(images/v3.png);"></div>
-											<h3>ซีรีน เลค นอร์ธ 5</h3>
-											<h4>แม่เหียะ, เมืองเชียงใหม่</h4>
+											<h3><strong>ชื่อโครงการ</strong> ซีรีน เลค นอร์ธ 5</h3>
+											<h4><strong>ทำเลที่ตั้ง</strong> แม่เหียะ, เมืองเชียงใหม่</h4>
 											<h4>เชียงใหม่</h4>
-											<h4>69</h4>
-											<h3 class="m">฿2.99M</h3>
-											<h4>N/A</h4>
-											<h4>ม.ค. 2557</h4>
-											<h4>สร้างเสร็จแล้ว</h4>
+											<h4><strong>จำนวนยูนิต</strong> 69</h4>
+											<h3 class="m"><strong>ราคา</strong> ฿2.99M</h3>
+											<h4><strong>ค่าเช่าต่อเดือน</strong> N/A</h4>
+											<h4><strong>ปีที่แล้วเสร็จ</strong> ม.ค. 2557</h4>
+											<h4><strong>สถานะของโครงการ</strong> สร้างเสร็จแล้ว</h4>
 										</div>
 									</div>
 									<div class="col-xl-3 pl-4 pr-4">
 										<div class="view-project">
 											<div class="img" style="background: url(images/v3.png);"></div>
-											<h3>ซีรีน เลค นอร์ธ 5</h3>
-											<h4>แม่เหียะ, เมืองเชียงใหม่</h4>
+											<h3><strong>ชื่อโครงการ</strong> ซีรีน เลค นอร์ธ 5</h3>
+											<h4><strong>ทำเลที่ตั้ง</strong> แม่เหียะ, เมืองเชียงใหม่</h4>
 											<h4>เชียงใหม่</h4>
-											<h4>69</h4>
-											<h3 class="m">฿2.99M</h3>
-											<h4>N/A</h4>
-											<h4>ม.ค. 2557</h4>
-											<h4>สร้างเสร็จแล้ว</h4>
+											<h4><strong>จำนวนยูนิต</strong> 69</h4>
+											<h3 class="m"><strong>ราคา</strong> ฿2.99M</h3>
+											<h4><strong>ค่าเช่าต่อเดือน</strong> N/A</h4>
+											<h4><strong>ปีที่แล้วเสร็จ</strong> ม.ค. 2557</h4>
+											<h4><strong>สถานะของโครงการ</strong> สร้างเสร็จแล้ว</h4>
 										</div>
-									</div>
+									</div> 
 									<div class="col-xl-3 pl-4 pr-4">
 										<div class="view-project">
 											<div class="img" style="background: url(images/v3.png);"></div>
-											<h3>ซีรีน เลค นอร์ธ 5</h3>
-											<h4>แม่เหียะ, เมืองเชียงใหม่</h4>
+											<h3><strong>ชื่อโครงการ</strong> ซีรีน เลค นอร์ธ 5</h3>
+											<h4><strong>ทำเลที่ตั้ง</strong> แม่เหียะ, เมืองเชียงใหม่</h4>
 											<h4>เชียงใหม่</h4>
-											<h4>69</h4>
+											<h4><strong>จำนวนยูนิต</strong> 69</h4>
 											<h3 class="m">
 												฿2.99M <br>
 												<span><b>▼ -28%</b> ต่ำกว่าราคาตลาด</span>
 											</h3>
-											<h4>N/A</h4>
-											<h4>ม.ค. 2557</h4>
-											<h4>สร้างเสร็จแล้ว</h4>
+											<h4><strong>ค่าเช่าต่อเดือน</strong> N/A</h4>
+											<h4><strong>ปีที่แล้วเสร็จ</strong> ม.ค. 2557</h4>
+											<h4><strong>สถานะของโครงการ</strong> สร้างเสร็จแล้ว</h4>
 										</div>
-									</div>
+									</div> 
 								</div>
 							</div>
 						</div>
