--- a/detail.html
+++ b/detail.html
@@ -88,7 +88,7 @@
 				<div class="col-xl-10">
 					<div class="col-xl-12">
 						<div class="row top-detail">
-							<div class="col-xl-6">
+							<div class="col-lg-6">
 								<h2>North 8 Condo By Land and Houses Chiangmai <br>
 									(คอนโดนอร์ท 8 บาย แลนด์ แอนด์ เฮ้าส์ เชียงใหม่)
 								</h2>
@@ -103,7 +103,7 @@
 								</span>
 								<h4>Maha Phruettharam, Bang Rak, Bangkok</h4>
 							</div>
-							<div class="col-xl-6 optix">
+							<div class="col-lg-6 optix">
 								<div>
 									<img src="images/11.png" alt="">
 									<h5>ห้องน้ำ <span>2</span></h5>
@@ -141,7 +141,7 @@
 					</div>
  
 					<div class="row">
-						<div class="col-xl-9 pr-0">
+						<div class="col-xl-9 pr-0 pr-mn">
 							<div class="img-view" style="background: url(images/v1.png);">
 								<div class="rent-sell">
 									<a href="#">
@@ -210,28 +210,28 @@
 							<h2>Room feature </h2>
 							<div class="col-xl-12">
 								<div class="row">
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr1.png" alt="">Corner Unit
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr2.png" alt="">Balcony
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr3.png" alt="">Full Western Kitchen
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr4.png" alt="">Fully Renovated
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr5.png" alt="">Renovated Kitchen
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr6.png" alt="">Washing Machine
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr7.png" alt="">Oven
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/rr8.png" alt="">TV
 									</div> 
 								</div>
@@ -240,7 +240,7 @@
 							<h2>Basic Information</h2>
 							<div class="col basic-information">
 								<div class="row">
-									<div class="col-xl-6 pr-5">
+									<div class="col-md-6 pr-5">
 										<h4>
 											Property Type
 											<br>
@@ -282,7 +282,7 @@
 											<span>U220983</span>
 										</h4>
 									</div>
-									<div class="col-xl-6 pr-5">
+									<div class="col-md-6 pr-5">
 										<h4>
 											Floor
 											<br>
@@ -340,22 +340,22 @@
 							<h2>Project Features </h2>
 							<div class="col-xl-12">
 								<div class="row">
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/pp1.png" alt="">Communal Pool 
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/pp2.png" alt="">Communal Gym
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/pp3.png" alt="">24H Security
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/pp4.png" alt="">CCTV (Video Surveillance)
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										<img src="images/pp5.png" alt="">Car Parking
 									</div>
-									<div class="col-xl-4 room-feature">
+									<div class="col-md-4 room-feature">
 										Reception / Lobby Area
 									</div>  
 								</div>
@@ -368,25 +368,25 @@
 								<h3>สอบถามข้อมูลเพิ่มเติม</h3>
 								<form>
 									<div class="form-group row">
-										<div class="col-xl-6 pr-1">
+										<div class="col-lg-6 pr-1">
 											<input type="text" class="form-control">
 										</div>
-										<div class="col-xl-6 pl-1">
+										<div class="col-lg-6 pl-1">
 											<input type="text" class="form-control">
 										</div>
 									</div>
 									<div class="form-group row">
-										<div class="col-xl-12">
+										<div class="col-lg-12">
 											<input type="text" class="form-control">
 										</div> 
 									</div>
 									<div class="form-group row">
-										<div class="col-xl-12">
+										<div class="col-lg-12">
 											<input type="text" class="form-control">
 										</div> 
 									</div>
 									<div class="form-group row">
-										<div class="col-xl-12">
+										<div class="col-lg-12">
 											<textarea name="" id="" cols="30" class="form-control"></textarea>
 										</div> 
 									</div>
@@ -412,7 +412,7 @@
 							<h2>Loan calculation</h2> 
 							<div class="loan-calculation">
 								<div class="row">
-									<div class="col-xl-6 pr-5">
+									<div class="col-lg-6 pr-5">
 										<form>
 											<div class="form-group row">
 												<div class="col-xl-6">
@@ -452,7 +452,7 @@
 
 										</form>
 									</div>
-									<div class="col-xl-6 pl-5">
+									<div class="col-lg-6 pl-5">
 										<div class="row">
 											<div class="col-xl-7 text-center">
 												<canvas id="doughnut"  width="233" height="233">xx</canvas>
@@ -757,7 +757,7 @@
 			</div>
 		</section>
 
-		<section class="bg-unit ">
+		<section class="bg-unit">
 			<div class="container-fluid">
 				<div class="row justify-content-center">
 					<div class="col-xl-10">
@@ -1296,7 +1296,7 @@
 								<br>
 
 								<div class="row">
-									<div class="col-xl-3 pl-4 pr-4">
+									<div class="col-lg-3 pl-4 pr-4 mb-x">
 										<div class="add-project">
 											<div class="img"><img src="images/plus.png" alt=""></div> 
 											<h3>ชื่อโครงการ</h3>
@@ -1308,7 +1308,7 @@
 											<h3>สถานะของโครงการ</h3>
 										</div>
 									</div>
-									<div class="col-xl-3 pl-4 pr-4">
+									<div class="col-lg-3 pl-4 pr-4">
 										<div class="view-project">
 											<div class="img" style="background: url(images/v3.png);"></div>
 											<h3><strong>ชื่อโครงการ</strong> ซีรีน เลค นอร์ธ 5</h3>
@@ -1321,7 +1321,7 @@
 											<h4><strong>สถานะของโครงการ</strong> สร้างเสร็จแล้ว</h4>
 										</div>
 									</div>
-									<div class="col-xl-3 pl-4 pr-4">
+									<div class="col-lg-3 pl-4 pr-4">
 										<div class="view-project">
 											<div class="img" style="background: url(images/v3.png);"></div>
 											<h3><strong>ชื่อโครงการ</strong> ซีรีน เลค นอร์ธ 5</h3>
@@ -1334,7 +1334,7 @@
 											<h4><strong>สถานะของโครงการ</strong> สร้างเสร็จแล้ว</h4>
 										</div>
 									</div> 
-									<div class="col-xl-3 pl-4 pr-4">
+									<div class="col-lg-3 pl-4 pr-4">
 										<div class="view-project">
 											<div class="img" style="background: url(images/v3.png);"></div>
 											<h3><strong>ชื่อโครงการ</strong> ซีรีน เลค นอร์ธ 5</h3>
