--- a/index.html
+++ b/index.html
@@ -1192,6 +1192,12 @@
 		});
 
 		$(document).ready(function() {
+			
+		 
+
+			
+
+
         	$('#item3').lightSlider({
 				item:3,
 				loop:false,
@@ -1200,7 +1206,7 @@
 				speed:600,
 				responsive : [
 					{
-						breakpoint:1200,
+						breakpoint:1900,
 						settings: {
 							item:3,
 							slideMove:1,
@@ -1224,6 +1230,7 @@
 					}
 				]
 			});  
+			$(".lslide").css("background-color", "yellow");
 		});
 
 		$(document).ready(function () { 
