--- a/category-advance.html
+++ b/category-advance.html
@@ -110,6 +110,7 @@
 			<a href="#">
 				<img src="images/sc4.png" alt="">
 			</a>
+			<button><i class="fas fa-comment-lines"></i></button>
 		</div>
 
 		<section class="category-sec">
@@ -756,6 +757,11 @@
 		$('.deal-type li').click(function() {
 			$('.deal-type li').removeClass("active");
 			$(this).addClass("active");
+		});
+
+		$('.social-con').click(function() {
+			$( this ).toggleClass( "active", 500, "easeInSine" );
+			$(".social-con button i").toggleClass("fa-comment-lines fa-times"); 
 		});
 
 		$(document).ready(function() {  
