--- a/category.html
+++ b/category.html
@@ -81,6 +81,7 @@
 			<a href="#">
 				<img src="images/sc4.png" alt="">
 			</a>
+			<button><i class="fas fa-comment-lines"></i></button>
 		</div>
 
 		<section class="category-sec">
@@ -1046,6 +1047,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
 	<script>
+
+		$('.social-con').click(function() {
+			$( this ).toggleClass( "active", 500, "easeInSine" );
+			$(".social-con button i").toggleClass("fa-comment-lines fa-times"); 
+		});
+
 		$('.deal-type li').click(function() {
 			$('.deal-type li').removeClass("active");
 			$(this).addClass("active");
