--- a/index.html
+++ b/index.html
@@ -1502,29 +1502,35 @@
 				slideMove:1,
 				easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
 				speed:600,
-				responsive : [
+				responsive : [ 
 					{
-						breakpoint:1900,
+						breakpoint:3500,
 						settings: {
-							item:3,
-							slideMove:1,
-							slideMargin:6,
+							item:4 
 						}
 					}, 
 					{
-						breakpoint:1200,
+						breakpoint:2100,
 						settings: {
-							item:2,
-							slideMove:1,
-							slideMargin:6,
+							item:3 
 						}
-					}, 
+					},
+					{
+						breakpoint:1700,
+						settings: {
+							item:3 
+						}
+					},  
+					{
+						breakpoint:1550,
+						settings: {
+							item:2 
+						}
+					},
 					{
 						breakpoint:800,
 						settings: {
-							item:2,
-							slideMove:1,
-							slideMargin:6,
+							item:2 
 						}
 					}, 
 					{
@@ -1533,7 +1539,7 @@
 							item:1,
 							slideMove:1
 						}
-					}
+					} 
 				]
 			});  
 			$('#item4').lightSlider({
@@ -1542,29 +1548,35 @@
 				slideMove:1,
 				easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
 				speed:600,
-				responsive : [
+				responsive : [ 
 					{
-						breakpoint:1900,
+						breakpoint:3500,
 						settings: {
-							item:3,
-							slideMove:1,
-							slideMargin:6,
+							item:4 
 						}
 					}, 
 					{
-						breakpoint:1200,
+						breakpoint:2100,
 						settings: {
-							item:2,
-							slideMove:1,
-							slideMargin:6,
+							item:3 
 						}
-					}, 
+					},
+					{
+						breakpoint:1700,
+						settings: {
+							item:3 
+						}
+					},  
+					{
+						breakpoint:1550,
+						settings: {
+							item:2 
+						}
+					},
 					{
 						breakpoint:800,
 						settings: {
-							item:2,
-							slideMove:1,
-							slideMargin:6,
+							item:2 
 						}
 					}, 
 					{
@@ -1573,7 +1585,7 @@
 							item:1,
 							slideMove:1
 						}
-					}
+					} 
 				]
 			});  
 			$('#item5').lightSlider({
@@ -1582,29 +1594,35 @@
 				slideMove:1,
 				easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
 				speed:600,
-				responsive : [
+				responsive : [ 
 					{
-						breakpoint:1900,
+						breakpoint:3500,
 						settings: {
-							item:3,
-							slideMove:1,
-							slideMargin:6,
+							item:4 
 						}
 					}, 
 					{
-						breakpoint:1200,
+						breakpoint:2100,
 						settings: {
-							item:2,
-							slideMove:1,
-							slideMargin:6,
+							item:3 
 						}
-					}, 
+					},
+					{
+						breakpoint:1700,
+						settings: {
+							item:3 
+						}
+					},  
+					{
+						breakpoint:1550,
+						settings: {
+							item:2 
+						}
+					},
 					{
 						breakpoint:800,
 						settings: {
-							item:2,
-							slideMove:1,
-							slideMargin:6,
+							item:2 
 						}
 					}, 
 					{
@@ -1613,7 +1631,7 @@
 							item:1,
 							slideMove:1
 						}
-					}
+					} 
 				]
 			});  
 			$('#item7').lightSlider({
