--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Home</a>
 					</li>  
-					<li class="nav-item dropdown ml-auto">
+					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Properties </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="#">Action</a>
@@ -39,7 +39,7 @@
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
 					</li> 
-					<li class="nav-item dropdown ml-auto">
+					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Contact </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="#">Action</a>
@@ -47,7 +47,7 @@
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
 					</li> 
-					<li class="nav-item dropdown ml-auto">
+					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Sell </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="#">Action</a>
@@ -55,7 +55,7 @@
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
 					</li> 
-					<li class="nav-item dropdown ml-auto">
+					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Rent </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="#">Action</a>
@@ -1435,7 +1435,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>  
 	 
-	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.js"></script>
 
 
