--- a/deposit.html
+++ b/deposit.html
@@ -15,11 +15,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
 
+	<link rel="stylesheet" href="css/image-uploader.min.css">
+
 </head>
 <body>
 
 	<header> 
-		<nav class="navbar navbar-light navbar-expand-xl bg-faded justify-content-center">
+		<nav class="navbar navbar-light navbar-expand-xl justify-content-center" style="position:relative;">
 			<a href="index.html" class="navbar-brand d-flex w-25 mr-auto">
 				<img src="images/logo-1.png" alt="">
 			</a>
@@ -338,9 +340,8 @@
 								<div class="form-group row"> 
 									<div class="col-lg-12">
 										<label>อัพโหลดรูปภาพ * (jpg, png, .bmp, ...)</label>
-										<div class="drop-zone">
-											<span class="drop-zone__prompt">Drop files here to upload</span>
-											<input type="file" name="myFile" multiple class="drop-zone__input">
+										<div class="input-field"> 
+											<div class="input-images-1" style="padding-top: .5rem;"></div>
 										</div>
 									</div>  
 								</div>
@@ -553,8 +554,7 @@
 			<span>Copyrights © 2022, Connex property</span>
 		</div>
 	</footer>
-
-
+ 
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
@@ -562,86 +562,89 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>   
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
+	<script src="js/image-uploader.min.js"></script> 
 	
-
+ 
 	<script>
- 
- 
 
-		document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
-			const dropZoneElement = inputElement.closest(".drop-zone");
+	 
 
-			dropZoneElement.addEventListener("click", (e) => {
-				inputElement.click();
+		
+
+		$(function () {
+
+			$('.input-images-1').imageUploader();
+
+	 
+
+			$('form').on('submit', function (event) {
+
+				// Stop propagation
+				event.preventDefault();
+				event.stopPropagation();
+
+				// Get some vars
+				let $form = $(this),
+					$modal = $('.modal');
+
+				// Set name and description
+				$modal.find('#display-name span').text($form.find('input[id^="name"]').val());
+				$modal.find('#display-description span').text($form.find('input[id^="description"]').val());
+
+				// Get the input file
+				let $inputImages = $form.find('input[name^="images"]');
+				if (!$inputImages.length) {
+					$inputImages = $form.find('input[name^="photos"]')
+				}
+
+				// Get the new files names
+				let $fileNames = $('<ul>');
+				for (let file of $inputImages.prop('files')) {
+					$('<li>', {text: file.name}).appendTo($fileNames);
+				}
+
+				// Set the new files names
+				$modal.find('#display-new-images').html($fileNames.html());
+
+				// Get the preloaded inputs
+				let $inputPreloaded = $form.find('input[name^="old"]');
+				if ($inputPreloaded.length) {
+
+					// Get the ids
+					let $preloadedIds = $('<ul>');
+					for (let iP of $inputPreloaded) {
+						$('<li>', {text: '#' + iP.value}).appendTo($preloadedIds);
+					}
+
+					// Show the preloadede info and set the list of ids
+					$modal.find('#display-preloaded-images').show().html($preloadedIds.html());
+
+				} else {
+
+					// Hide the preloaded info
+					$modal.find('#display-preloaded-images').hide();
+
+				}
+
+				// Show the modal
+				$modal.css('visibility', 'visible');
 			});
 
-			inputElement.addEventListener("change", (e) => {
-				if (inputElement.files.length) {
-				updateThumbnail(dropZoneElement, inputElement.files[0]);
+			// Input and label handler
+			$('input').on('focus', function () {
+				$(this).parent().find('label').addClass('active')
+			}).on('blur', function () {
+				if ($(this).val() == '') {
+					$(this).parent().find('label').removeClass('active');
 				}
 			});
 
-			dropZoneElement.addEventListener("dragover", (e) => {
-				e.preventDefault();
-				dropZoneElement.classList.add("drop-zone--over");
-			});
-
-			["dragleave", "dragend"].forEach((type) => {
-				dropZoneElement.addEventListener(type, (e) => {
-				dropZoneElement.classList.remove("drop-zone--over");
-				});
-			});
-
-			dropZoneElement.addEventListener("drop", (e) => {
-				e.preventDefault();
-
-				if (e.dataTransfer.files.length) {
-				inputElement.files = e.dataTransfer.files;
-				updateThumbnail(dropZoneElement, e.dataTransfer.files[0]);
-				}
-
-				dropZoneElement.classList.remove("drop-zone--over");
-			});
-			});
-
-			/**
-			 * Updates the thumbnail on a drop zone element.
-			 *
-			 * @param {HTMLElement} dropZoneElement
-			 * @param {File} file
-			 */
-			function updateThumbnail(dropZoneElement, file) {
-			let thumbnailElement = dropZoneElement.querySelector(".drop-zone__thumb");
-
-			// First time - remove the prompt
-			if (dropZoneElement.querySelector(".drop-zone__prompt")) {
-				dropZoneElement.querySelector(".drop-zone__prompt").remove();
-			}
-
-			// First time - there is no thumbnail element, so lets create it
-			if (!thumbnailElement) {
-				thumbnailElement = document.createElement("div");
-				thumbnailElement.classList.add("drop-zone__thumb");
-				dropZoneElement.appendChild(thumbnailElement);
-			}
-
-			thumbnailElement.dataset.label = file.name;
-
-			// Show thumbnail for image files
-			if (file.type.startsWith("image/")) {
-				const reader = new FileReader();
-
-				reader.readAsDataURL(file);
-				reader.onload = () => {
-				thumbnailElement.style.backgroundImage = `url('${reader.result}')`;
-				};
-			} else {
-				thumbnailElement.style.backgroundImage = null;
-			}
-		}
+		 
+		});
+ 
+		
 
 
 	</script>
-	
 </body>
 </html>
