--- a/category.html
+++ b/category.html
@@ -105,7 +105,7 @@
 		</div>
 
 		<section class="category-sec">
-			<div class="col-xl-8">
+			<div class="col-xl-8 col-lg-12">
 				<div class="row">
 					<div class="col-xl-8">
 						<h1 class="h1x">โครงการเด่นใน <span>เชียงใหม่</span></h1>
